[package]

name 			= "sickle"
version			= "0.0.0"
license 		= "MIT"
authors			= ["hankai17 <hankai17@126.com>"]
description   	= "Lightweight non-blocking IO"
documentation 	= ""
homepage      	= ""
repository    	= ""
readme        	= "README.md"
keywords      	= ["io", "async", "non-blocking"]
categories    	= ["asynchronous"]
exclude       	= [
  ".gitignore",
  ".travis.yml",
  "deploy.sh",
]

[features]

[dependencies]
log      		= "0.4"
libc   			= "0.2.42"
slab    		= "0.4.0"
net2			= "0.2.29"
iovec			= "0.1.1"
bytes			= "1.5.0"
tracing         = "0.1"
chrono          = "0.4.38"

[dev-dependencies]
env_logger 		= "0.11.3"

[[test]]
name = "test"
path = "test/mod.rs"
